--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+header {
+  height: 20%;
+  margin: 0;
+  background:rgb(255, 255, 255);
+}
+
 html, body {
   height: 100%;
   margin: 0;
@@ -9,3 +15,28 @@ body {
   align-items: center;
   justify-content: center;
 }
+
+h1.lScore {
+  color: rgb(255, 255, 255);
+  margin-right: 2%;
+  margin-bottom: 45%;
+}
+
+h1.rScore {
+  color: rgb(255, 255, 255);
+  margin-left: 5%;
+  margin-bottom: 45%;
+}
+
+h1.left {
+  color: rgb(255, 255, 255);
+  margin-right: 5%;
+  margin-bottom: 45%;
+}
+
+h1.right {
+  color:rgb(255, 255, 255);
+  margin-left: 2%;
+  margin-bottom: 45%;
+}
+
