--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ header {
 }
 
 html, body {
-  height: 100%;
+  height: 90%;
   margin: 0;
 }
 
@@ -17,26 +17,36 @@ body {
 }
 
 h1.lScore {
-  color: rgb(255, 255, 255);
+  color: rgb(255, 119, 29);
   margin-right: 2%;
-  margin-bottom: 45%;
+  margin-bottom: 30%;
 }
 
 h1.rScore {
-  color: rgb(255, 255, 255);
+  color: rgb(45, 248, 255);
   margin-left: 5%;
-  margin-bottom: 45%;
+  margin-bottom: 30%;
 }
 
 h1.left {
   color: rgb(255, 255, 255);
   margin-right: 5%;
-  margin-bottom: 45%;
+  margin-bottom: 30%;
 }
 
 h1.right {
   color:rgb(255, 255, 255);
   margin-left: 2%;
-  margin-bottom: 45%;
+  margin-bottom: 30%;
+}
+
+button.reset {
+  background-color: burlywood;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  width: 20%;
+  height: 8%;
+  font-size: x-large;
+  position: fixed;
+  margin-top: 30%;
 }
 
